# dna-coding-challenge

./: .gitignore  README.md  pyproject.toml
problem_1/: constants.py  file_searcher.py  helpers.py  main.py  mock_data.py  tests.py
problem_1/data/: small_sample.txt  test_1_en_words_1000_short.txt  test_2_en_words_1000_long.txt
problem_2/: problem_2.py
